# specula-framework

./: .gitignore  ALIGNMENT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE.md  QUICKSTART.it.md  QUICKSTART.md  README.md  SECURITY.md  VERSIONS.md  pyproject.toml
architecture/: INPUT_ARCHITECTURE.md  JSON_SCHEMAS.md  STATE_MACHINE.md
constitution/: DOCUMENTO_BASE.md  SPECULA_AI_CONSTITUTION.md  SPECULA_METHOD_FOUNDATION.md
docs/: 00_index.md  01_foundations.md  02_ai_constitution.md  03_technical_governance.md  04_control_logic.md  05_system_architecture_inputs.md  06_json_schemas_outputs.md  07_prompt_playbook_v1.md  08_specula_method_v2_3.md  09_implementation_guide.md  10_sample_conversations.md  11_validation_tests.md  12_persistence_schema.md  13_specula_method_agent.md  14_specula_method_v2_4_5_2_aligned.md  15_circolo_di_sintesi_governance.md  16_refusal_register_learning_loop.md
examples/: phase_1_scenarios.example.json
governance/: AI_GOVERNANCE.md  REFUSAL_SLOWDOWN_POLICY.md
meta/: GLOSSARY.md
playbook/: PROMPT_PLAYBOOK_V1.md
prompts/: PROMPT_PLAYBOOK_V1.md  SYSTEM_PROMPT.md  specula_method_agent_base.md
schemas/: phase0_activation.schema.json  phase1_5_competitive_map.schema.json  phase1_scenarios.schema.json  phase2_brand_dna.schema.json  phase3_prototypes.schema.json  phase3_refusals.schema.json  phase4_narrative_system.schema.json  phase5_cocreation.schema.json  phase6_guardian.schema.json
specs/: precedence.md  terminology.md  versioning.md
sql/: specula_persistence.sql
tests/: test_orchestrator.py  (+2 more)
(+38 files in other folders)
