[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specula-framework-agent"
version = "0.1.0"
description = "Minimal executable Specula agent runtime with schema and policy validation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "jsonschema>=4.22.0"
]

[project.optional-dependencies]
postgres = [
  "psycopg[binary]>=3.2"
]
dev = [
  "pytest>=8.0"
]

[project.scripts]
specula-agent = "specula_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
